--- a/src/main/resources/templates/github/repositories.html
+++ b/src/main/resources/templates/github/repositories.html
@@ -18,17 +18,10 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
-                                <span>Count: </span><span th:text="${repositories.size()}"></span>
+                                <span>Count: </span><span th:text="${repositoryForm.repositoryItems.size()}"></span>
                             </div>
                         </div>
-                        <form  th:action="@{/clone}" method="post">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <button type="submit" class="btn btn-primary">Clone</button>
-                                </div>
-                            </div>
-                        </form>
-                        <form  th:action="@{/repositories/collaborators}" method="post">
+                        <form th:action="@{/repositories/collaborators}" method="post">
                             <div class="row">
                                 <div class="col-md-4">
                                     <input type="text" name="login"></input>
@@ -36,30 +29,36 @@
                                 </div>
                             </div>
                         </form>
-                        <div class="table-responsive" th:if="${not #lists.isEmpty(repositories)}">
-                            <table class="table table-responsive table-hover w-100 d-block d-md-table">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th>Select</th>
-                                    <th>Private</th>
-                                    <th>Owner</th>
-                                    <th>Clone URL</th>
-                                    <th>Action</th>
-                                </tr>
-                                </thead>
-                                <tr th:each="repo,iter : ${repositories}">
-                                    <td><input th:name="${'repo' + iter.index}" type="checkbox" checked></td>
-                                    <td th:text="${repo.owner.login}"></td>
-                                    <td th:text="${repo.private ? 'PRIVATE' : ''}"></td>
-                                    <td th:text="${repo.cloneUrl}">Url</td>
-                                    <td><a class="fa fa-users" th:href="${'/repositories/' + repo.owner.login + '/' + repo.name + '/collaborators'}"></a></td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <button type="submit" class="btn btn-primary">Clone</button>
-                            </div>
+                        <div class="table-responsive" th:if="${not #lists.isEmpty(repositoryForm.repositoryItems)}">
+                            <form th:object="${repositoryForm}" th:action="@{/clone}" method="post">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <button type="submit" class="btn btn-primary">Clone</button>
+                                    </div>
+                                </div>
+                                <table class="table table-responsive table-hover w-100 d-block d-md-table">
+                                    <thead class="thead-light">
+                                    <tr>
+                                        <th>Select</th>
+                                        <th>Private</th>
+                                        <th>Owner</th>
+                                        <th>Clone URL</th>
+                                        <th>Action</th>
+                                    </tr>
+                                    </thead>
+                                    <tr th:each="repo,iter : *{repositoryItems}" th:class="${repo.selected ? 'bg-info' : ''}">
+                                        <td>
+                                            <input th:field="*{repositoryItems[__${iter.index}__].url}" type="hidden">
+                                            <input th:field="*{repositoryItems[__${iter.index}__].selected}" type="checkbox"
+                                                   th:disabled="*{repositoryItems[__${iter.index}__].selected}">
+                                        </td>
+                                        <td th:text="${repo.repository.owner.login}"></td>
+                                        <td th:text="${repo.repository.private ? 'PRIVATE' : ''}"></td>
+                                        <td th:text="${repo.repository.cloneUrl}">Url</td>
+                                        <td><a class="fa fa-users" th:href="${'/repositories/' + repo.repository.owner.login + '/' + repo.repository.name + '/collaborators'}"></a></td>
+                                    </tr>
+                                </table>
+                            </form>
                         </div>
                     </div>
                 </div>
